Fixed the problems and added some CSS

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <!-- <button id="main-btn">Click Me</button> -->
-    <!-- Image and text -->
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <img
@@ -32,7 +30,7 @@
 
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Pies!!!</h1>
+            <h1 class="display-4">The NSS Pie Shop</h1>
             <p class="lead">Everybody likes pie...</p>
         </div>
     </div>
